# opengl-tutorial

./: CMakeLists.txt  main.cpp
application/: CMakeLists.txt  application.cpp  application.hpp
shaders/: CMakeLists.txt  basic_fragment_shader.txt
